# anxwritter

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
anxwritter/: __init__.py  _config_layering.py  _i2_interop.py  builder.py  chart.py  cli.py  colors.py  entities.py  enums.py  errors.py  models.py  resolved.py  semantic.py  timezones.json  timing.py  transforms.py  utils.py  validation.py
anxwritter/layouts/: __init__.py  _common.py  _geometric.py  fa2.py  fr.py  tree.py
docs/: getting-started.md
docs/guide/: analyst-guide.md  yaml-json-guide.md
docs/reference/: attributes.md  cards-and-grades.md  cli.md  constructors.md  datetime-and-timezones.md  entities.md  links.md  semantic-types.md  settings.md  validation.md  visual-styling.md
examples/: canvas_display_example.py  config.yaml  date_attribute_displays_example.py  display_synthesizers_example.py  display_templates_example.py  investigation_chart.py  link_styling.py
tests/: test_attribute_class_type.py  test_audit_gaps.py  test_canvas_display.py  test_chart_build.py  test_cli.py  test_cli_helpers.py  test_colors.py  test_config.py  test_config_layering.py  test_config_roundtrip.py  test_constructors.py  test_dataclass_fields.py  test_date_attribute_displays.py  test_datetime_format.py  test_determinism.py  test_display.py  test_display_templates.py  test_entities.py  test_enum_aliases.py  test_enums.py  test_error_completeness.py  test_examples_smoke.py  test_geo_map.py  test_golden_digest.py  test_input_equivalence.py  test_layouts.py  test_link_styling.py  test_palette_serialize.py  test_perf_scale.py  test_properties.py  test_resolve_mapping.py  test_semantic.py  test_settings.py  test_transforms_scale.py  test_ui_schema_sync.py  test_utils.py  test_validation.py  test_validation_equivalence.py  test_yaml_user_input.py
tests/fixtures/: equivalence_specs.py  invalid_specs.py  strategies.py
tests/helpers/: chart_equivalence.py
ui/: app.js  colors.js  help.js  index.html  schema.js  style.css  validate.js
