[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anxwritter"
version = "1.7.2"
description = "Write i2 Analyst's Notebook Exchange (.anx) files from Python, JSON, or YAML"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "gustavo-gkmi" },
]
keywords = [
    "i2-analyst-notebook",
    "anb",
    "anx",
    "link-analysis",
    "osint",
    "intelligence",
    "law-enforcement",
    "investigation",
    "network-analysis",
    "fraud",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Other Audience",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "loguru>=0.7",
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.0",
    "ruff>=0.5",
]

[project.scripts]
anxwritter = "anxwritter.cli:main"

[project.urls]
Homepage = "https://github.com/gustavo-gkmi/anxwritter"
Documentation = "https://github.com/gustavo-gkmi/anxwritter/blob/main/docs/getting-started.md"
Repository = "https://github.com/gustavo-gkmi/anxwritter"
Issues = "https://github.com/gustavo-gkmi/anxwritter/issues"
Changelog = "https://github.com/gustavo-gkmi/anxwritter/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.sdist]
include = [
    "anxwritter/**",
    "tests/**",
    "docs/**",
    "examples/**",
    "LICENSE",
    "NOTICE.md",
    "README.md",
    "pyproject.toml",
    "uv.lock",
    ".gitignore",
]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo",
    "**/*.egg-info",
    ".hypothesis/**",
    ".pytest_cache/**",
    ".ruff_cache/**",
    ".mypy_cache/**",
    ".coverage",
    "htmlcov/**",
    ".github/**",
    ".claude/**",
    ".sbx/**",
    ".venv/**",
    ".venv-*/**",
    "output/**",
    "*.log",
    "*.orig",
    "*.rej",
]

[tool.hatch.build.targets.wheel]
packages = ["anxwritter"]

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = [".venv", "build", "dist", "output"]

[tool.ruff.lint]
# Conservative bug-only ruleset — no style/formatting opinions.
# E9   syntax errors
# F    pyflakes (unused / undefined / shadowed)
# B    flake8-bugbear (likely bugs: B904 raise-from, B905 zip-strict, etc.)
select = ["E9", "F", "B"]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately import fixtures via "from x import *" patterns and
# define unused-but-imported helpers used reflectively by pytest.
"tests/**" = ["F401", "F811", "F841", "B"]
"tests/__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "perf: performance / scale tests - excluded from default runs; run with `pytest -m perf`",
]
# Note: tests/test_cli.py runs the CLI via subprocess.run, so coverage of
# anxwritter/cli.py reports as 0% under the default `pytest --cov`. The CLI
# is exercised by ~30 tests in test_cli.py — see tests_audit.md §1 for the
# full picture and how to enable subprocess coverage tracking if needed.
addopts = "-m 'not perf'"
